Se agrego contenedor flex y se usaron los elementos display, justify-content, align-items y position:fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/* General Reset */
+/* General*/
 * {
     margin: 0;
     padding: 0;
@@ -11,14 +11,14 @@ body {
     background-color: #000;
 }
 
-/* Navbar */
-.navbar {
+/* Contenedor Flex */
+.flex-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 30px 20px;
     background: rgba(0, 0, 0, 0.8);
-    position: fixed;
+    position: fixed; /* Mantiene fija la parte superior mientras se desplaza la página */
     width: 100%;
     z-index: 10;
 }
@@ -142,6 +142,7 @@ body {
     }
 }
 
+
 /* Carrusel */
 .carousel {
     position: absolute;
@@ -199,3 +200,4 @@ audio {
     font-family: "Lexend Deca", sans-serif;
     font-optical-sizing: auto;
 }
+
